--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -3,6 +3,6 @@
     <div class="channel-info">
       <span style="font-style: italic">Channel n°<strong>{{channel.id}}</strong></span> : {{channel.name}}
     </div>
-    <button class="channel-btn" (click)="showStyle = !showStyle; joinChannel(channel.id)">Join</button>
+    <button class="channel-btn btn" (click)="showStyle = !showStyle; joinChannel(channel.id)">Join</button>
   </div>
 </div>
