--- a/src/app/channels/channel-form/channel-form.component.html
+++ b/src/app/channels/channel-form/channel-form.component.html
@@ -10,7 +10,7 @@
 
   <div class="page-selector">
     <button class="previous-page" (click)="prevChannel()">❮</button>
-    <span class="page-display">Page n°{{channelService.pageNumber}}</span>
+    <span class="page-display">Page n°{{channelService.pageNumber + 1}}</span>
     <button class="next-page" (click)="nextChannel()">❯</button>
   </div>
 
