--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -5,7 +5,7 @@
                  placeholder="Type your message here..." required [(ngModel)]="message.content"
                  (keyup.enter)="sendMessage()"></span>
 
-    <button class="send-message-button" (click)="sendMessage()"> Send</button>
+    <button class="send-message-btn" (click)="sendMessage()"> Send</button>
 
   </div>
 
