--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,7 +19,7 @@
 }
 
 .nav-bar {
-  background-color: #35363B /* Nice black #232323*/;
+  background-color: #356488 /* Nice black #232323*/;
   width: 100%;
   height: 10%;
   padding-top: 5px;
@@ -73,7 +73,7 @@
 }
 
 .channel-space {
-  background-color: #F2F2F2;
+  background-color: #e6f0ff;
   padding-right: 10px;
   border-right: 1px solid #35363B;
   width: 30%;
@@ -155,7 +155,7 @@
 }
 
 .login-root-wrapper {
-  background-color: #F2F2F2;
+  background-color: #c8dcff;
   border: 3px lightgray solid;
   border-radius: 5px;
   padding: 20px 20px 20px 20px;
