--- a/src/app/messages/message/message.component.css
+++ b/src/app/messages/message/message.component.css
@@ -5,7 +5,8 @@ iframe, img {
 
 .message-root {
   width: 98%;
-  color: #F2F2F2;
+  background-color: #bcf1ff;
+  border-radius: 10px;
   text-align: justify;
   word-wrap: break-word;
 }
@@ -27,9 +28,7 @@ iframe, img {
 }
 
 .message-content {
-  background-color: #64656A;
   border: none;
-  border-radius: 10px;
   padding: 1%;
   margin-bottom: 1%;
   margin-left: 1%;
@@ -38,6 +37,6 @@ iframe, img {
   width: 100%;
 }
 
-.message-content:hover {
-  background-color: #35363B;
+.message-root:hover {
+  background-color: #a0e5ff;
 }
