--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -33,7 +33,7 @@
         <option value="zh">Chinois</option>
         <option value="ja">Japonais</option>
       </select>
-      <button class="translate-btn" (click)="traduction(message.content)">Translate</button>
+      <button class="translate-btn" (click)="traduction()">Translate</button>
 
 
     </div>
