--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -1,4 +1,5 @@
 <div class="message-form-root">
+
   <div class="input-root" *ngIf="channelType2 === 0">
 
     <span><input class="message-input style-thick-border" type="text" id="name" name="name"
@@ -8,6 +9,7 @@
     <button class="send-message-btn" (click)="sendMessage()"> Send</button>
 
   </div>
+
   <div class="input-root" *ngIf="channelType2 === 1">
 
     <span><input class="message-input style-thick-border" type="text" id="input message" name="name"
@@ -18,7 +20,7 @@
 
   </div>
 
-  <div class="message-form-modul-root">
+  <div class="message-form-module-root">
 
     <div class="weather-root">
 
@@ -51,5 +53,3 @@
   </div>
 
 </div>
-
-
