--- a/src/app/messages/message-form/message-form.component.css
+++ b/src/app/messages/message-form/message-form.component.css
@@ -26,13 +26,9 @@
 
 .send-message-btn {
   color: #35363B;
-  /*
-  width: 15%;
-  display: inline;
-  */
 }
 
-.message-form-modul-root {
+.message-form-module-root {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
